static/styles/main.css
html {
    font-family: sans-serif;
    line-height: 1.15;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

body {
    margin: 0;
}

article, aside, footer, header, nav, section {
    display: block;
}

h1 {
    font-size: 2em;
    margin: 0.67em 0;
}

figcaption figure, main {
    display: block;
}

figure {
    margin: 1em 40px;
}

hr {
    box-sizing: content-box;
    height: 0;
    overflow: visible;
}

pre {
    font-family: monospace, monospace;
    font-size: 1em;
}

a {
    background-color: transparent;
    -webkit-text-decoration-skip: objects;
}

a:active {
    outline-width: 0;
}

a:hover {
    outline-width: 0;
}

abbr[title] {
    border-bottom: none;
    text-decoration: underline;
    text-decoration: underline dotted;
}

b, strong {
    font-weight: inherit;
}

b, strong {
    font-weight: bolder;
}

code, kbd, samp {
    font-family: monospace, monospace;
    font-size: 1em;
}

dfn {
    font-style: italic;
}

mark {
    background-color: #ff0;
    color: #000;
}

small {
    font-size: 80%;
}

sub, sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sub {
    bottom: -0.25em;
}

sup {
    top: -0.5em;
}

audio, video {
    display: inline-block;
}

audio:not([controls]) {
    display: none;
    height: 0;
}

img {
    border-style: none;
}

svg:not(:root) {
    overflow: hidden;
}

button, input, optgroup, select, textarea {
    font-family: sans-serif;
    font-size: 100%;
    line-height: 1.15;
    margin: 0;
}

button, input {
    overflow: visible;
}

button, select {
    text-transform: none;
}

button, html [type="button"], [type="reset"], [type="submit"] {
    -webkit-appearance: button;
}

button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
    border-style: none;
    padding: 0;
}

button::-moz-focusring, [type="button"]::-moz-focusring, [type="reset"]::-moz-focusring, [type="submit"]::-moz-focusring {
    outline: 1px dotted ButtonText;
}

fieldset {
    border: 1px solid #c0c0c0;
    margin: 0 2px;
    padding: 0.35em 0.625em 0.75em;
}

legend {
    box-sizing: border-box;
    color: inherit;
    display: table;
    max-width: 100%;
    padding: 0;
    white-space: normal;
}

progress {
    display: inline-block;
    vertical-align: baseline;
}

textarea {
    overflow: auto;
}

[type="checkbox"], [type="radio"] {
    box-sizing: border-box;
    padding: 0;
}

[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
    height: auto;
}

[type="search"] {
    -webkit-appearance: textfield;
    outline-offset: -2px;
}

[type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
    -webkit-appearance: none;
}

::-webkit-file-upload-button {
    -webkit-appearance: button;
    font: inherit;
}

details, menu {
    display: block;
}

summary {
    display: list-item;
}

canvas {
    display: inline-block;
}

template {
    display: none;
}

[hidden] {
    display: none;
}

body {
    font-family: Roboto, sans-serif;
    font-size: 14pt;
    color: #444548;
    background-color: #FDFDFD;
    line-height: 33px;
}

* {
    box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
    font-family: Roboto Condensed, sans-serif;
    font-weight: bold;
}

a {
    color: #7EBC42;
    text-decoration: none;
}

input[type=text], input[type=email], input[type=submit] {
    background-color: #FDFDFD;
    height: 50px;
    padding: 20px;
    border: 0;
    border-radius: 0;
    line-height: 0;
}

input[type=text], input[type=email] {
    border: 1px solid #CCC;
}

input[type=submit] {
    background-color: #7EBC42;
    color: #FDFDFD;
    height: 50px;
    padding: 20px;
    border: 0;
    border-radius: 0;
}

blockquote {
    border-left: 2px solid #CCC;
    color: #666;
    margin-left: 0;
    padding-left: 20px;
}

header {
    background-image: url(/images/footer_lodyas.png);
    color: #FDFDFD;
}

header.home {
    padding-bottom: 100px;
}

header > .content {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

header > .content > .logo {
    background-color: #7EBC42;
    text-align: center;
    color: #FDFDFD;
    font-weight: bold;
    padding: 30px 60px;
    width: 400px;
}

@media screen and (min-width: 1200px) {
        .logo {
    flex-basis: 100%;
    display: flex;
    flex-direction: column-reverse;
    margin-right: 100px;
}
}

header > .content > nav > ul {
    list-style-type: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

header > .content > nav > ul > li {
    text-align: center;
}

header > .content > nav > ul > li.callout {
    border: 1px solid #FDFDFD;
}

header > .content > nav > ul > li > a {
    color: #FDFDFD;
    line-height: 50px;
    padding-left: 25px;
    padding-right: 25px;
}

header > .content > nav > ul > li > a:hover {
    color: #7EBC42;
}

@media screen and (min-width: 768px) {
        header nav > ul {
    flex-direction: row !important;
}
}

@media screen and (min-width: 768px) {
        header nav > ul > li {
    margin-right: 10px;
}
}

@media screen and (min-width: 768px) {
        header nav > ul > li:last-child {
    margin-right: 0;
}
}

header > .content > .info {
    flex-direction: column;
    text-align: justify;
    align-self: flex-end;
}

header > .content > .info > form {
    display: flex;
    margin-bottom: 0;
}

header > .content > .info > form > input[type=email] {
    width: 100%;
}

header > .content > * {
    max-width: 80%;
    margin: 0 auto;
}

@media screen and (min-width: 768px) {
        header {
    background-image: url(/images/header.png);
    background-size: cover;
    background-position: bottom;
    background-repeat: no-repeat;
}
}

@media screen and (min-width: 1200px) {
        header {
    background-image: url(/images/header-short.png);
    background-size: cover;
    background-position: 50% -30px;
    flex-direction: row;
}
}

@media screen and (min-width: 1200px) {
        header.home {
    background-image: url(/images/header.png);
    background-position: bottom;
}
}

@media screen and (min-width: 1200px) {
        header.home > .content {
    height: 500px;
    margin-bottom: 100px;
}
}

@media screen and (min-width: 1200px) {
        header > .content {
    flex-wrap: wrap;
    flex-direction: column;
    align-items: flex-start;
    height: 125px;
}
}

@media screen and (min-width: 1200px) {
        header > .content > * {
    width: 700px;
    margin: 0;
}
}

main {
    max-width: 1200px;
    margin: 0 auto;
    margin-top: 100px;
    padding: 0 25px;
}

@media screen and (min-width: 1200px) {
        main.home {
    margin-top: 0;
}
}

@media screen and (min-width: 1200px) {
        main.home > article:first-child > h1 {
    width: 400px;
    text-align: center;
    margin-top: -100px;
    background-color: #FDFDFD;
    height: 100px;
    padding-top: 25px;
    padding-left: 25px;
    padding-right: 25px;
    font-size: 1.7em;
    line-height: 1.2em;
}
}

main  article::after {
    display: block;
    height: 0;
    visibility: hidden;
    content: "";
    clear: both;
}

main  article > .calloutImage {
    border-radius: 400px;
    filter: grayscale();
    display: block;
    width: 80%;
    margin: 0 auto;
    max-width: 320px;
}

@media screen and (min-width: 1200px) {
        .calloutImage {
    float: left;
    width: 320px !important;
    margin: 0 40px !important;
}
}

main  article > .logo-sponsor {
    display: block;
    max-width: 400px;
    margin: 0 auto;
}

@media screen and (min-width: 1200px) {
        .logo-sponsor {
    float: left;
    margin-left: 0;
    margin-right: 40px !important;
}
}

main  article + article {
    margin-top: 50px;
    padding-top: 50px;
}

main  section > h1.level {
    margin-bottom: 50px;
    margin-top: 50px;
}

@media screen and (min-width: 1200px) {
        main {
    padding: 0;
}
}

#sponsors {
    padding-top: 50px;
    margin-top: 50px;
    border-top: 1px solid #CCC;
}

#sponsors > ul {
    list-style-type: none;
    padding-left: 0;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

#sponsors > ul > li  img {
    width: 300px;
    margin: 50px;
}

footer {
    background-image: url(/images/footer_lodyas.png);
    margin-top: 100px;
    padding-top: 100px;
    padding-bottom: 75px;
    color: #FDFDFD;
}

footer > .content {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    padding: 0 25px;
}

footer > .content  input {
    display: block;
    margin-bottom: 20px;
}

footer > .content  input:last-child {
    margin-bottom: 0;
}

footer > .content > * {
    flex: 1;
    margin-right: 50px;
}

footer > .content > :last-child {
    margin-right: 0;
}

@media screen and (min-width: 768px) {
        footer > .content {
    flex-direction: row;
    padding: 0;
}
}

